<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UI.view.LoginFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/circleImageView2"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.116"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/hello"
                android:layout_width="210dp"
                android:layout_height="60dp"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/antonregular"
                android:text="@string/hello_there"
                android:textColor="#BC4644"
                android:textSize="35sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.144"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/circleImageView2" />


            <TextView
                android:id="@+id/textView2"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:fontFamily="@font/antonregular"
                android:text="@string/welcome_back"
                android:textColor="#BC4644"
                android:textSize="35sp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.167"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hello" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/enter_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="370dp"
                android:layout_height="60dp"
                android:layout_marginTop="40dp"
                android:hint="@string/enter_your_email"
                android:importantForAutofill="no"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.492"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:textInputLayoutFocusedRectEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:textColorHint="#78909C"
                    android:textSize="20sp"
                    android:textStyle="bold|italic" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/enter_pass"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="370dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:hint="@string/enter_your_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.492"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/enter_name"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="numberPassword"
                    android:textColorHint="#78909C"
                    android:textSize="20sp"
                    android:textStyle="bold|italic"
                    tools:ignore="TextContrastCheck,TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/login"
                android:layout_width="360dp"
                android:layout_height="53dp"
                android:layout_marginTop="52dp"
                android:backgroundTint="#873130"
                android:text="@string/login"
                android:textSize="25sp"
                android:textStyle="bold|italic"
                app:backgroundTint="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.49"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/enter_pass" />


            <TextView
                android:id="@+id/signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/don_t_have_account_sign_up"
                android:textSize="15sp"
                android:layout_marginTop="15dp"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</FrameLayout>